# dbtcore-bigquery-aovivo

./: .sqlfluff  .user.yml  README.md  dbt_project.yml  env_var.sh  pyproject.toml
models/staging/: stg_order_items.sql  stg_products.sql  stg_supplies.sql
