[tool.poetry]
name = "dbtcore-bigquery-aovivo"
version = "0.1.0"
description = "somente o repositório do workshop"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.8.4"
dbt-bigquery = "^1.8.2"
sqlfluff-templater-dbt = "^3.1.0"
taskipy = "^1.13.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
sqlfluff = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
fix = "sqlfluff fix snapshots && sqlfluff fix models"
